--- a/app/src/main/res/drawable/box.xml
+++ b/app/src/main/res/drawable/box.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android">
+            <stroke
+                android:width="2dp"
+                android:color="#FFFFFF" />
+        </shape>
+    </item>
 </selector>
+<!-- https://stackoverflow.com/questions/35762006/how-to-have-edittext-with-border-in-android-lollipop -->
