--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -15,4 +15,17 @@
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/hintImage"
         />
+
+    <GridView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:numColumns="4"
+        android:id="@+id/graphListView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_bias="0.1"
+        android:background="@drawable/rectangle"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
