--- a/app/src/main/res/layout/graph_item.xml
+++ b/app/src/main/res/layout/graph_item.xml
@@ -1,6 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    android:padding="16dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/itemET"
+        android:layout_width="75dp"
+        android:layout_height="25dp"
+        android:background="@drawable/box"
+        android:gravity="center"
+        />
+</RelativeLayout>
