--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,16 @@
         app:layout_constraintBottom_toTopOf="@id/newPuzzle"
         />
 
+    <TextView
+        android:id="@+id/loading_text_view"
+        android:text="Loading..."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/startWord"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:visibility="gone"/>
+
     <EditText
         android:id="@+id/endWord"
         android:hint="End Word"
