i centered the button on my instructions page for you Prof. Novak, I hope youre very happy with this. You better give me an A+++++

--- a/app/src/main/res/layout/activity_instructions_page.xml
+++ b/app/src/main/res/layout/activity_instructions_page.xml
@@ -39,7 +39,8 @@
             android:textColor="@android:color/white"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:layout_gravity="center_horizontal"/>
 
     </LinearLayout>
 </ScrollView>
